# groundlab

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/art_packs/art_pack_0_1/: art_pack.json  art_pack_summary.json
assets/artkits/dry_upland_outpost/: manifest.ron
assets/heroscenes/: dry_upland_outpost_hero_01.ron
assets/sprite_styles/cozy_upland/: motifs.ron  style.ron
assets/sprite_styles/cozy_upland_lush/: motifs.ron  style.ron
assets/sprite_styles/cozy_upland_sparse/: motifs.ron  style.ron
assets/visual_lock_06/: README.md
assets/visual_targets/dry_upland_outpost_01/: manifest.ron
crates/ground_app/: Cargo.toml
crates/ground_app/src/: art_lab.rs  main.rs
crates/ground_cli/: Cargo.toml
crates/ground_cli/src/: main.rs
crates/ground_core/: Cargo.toml
crates/ground_core/src/: art_lab.rs  color.rs  edit_patch.rs  edit_scenario.rs  export.rs  feature.rs  hero_scene.rs  lib.rs  los.rs  mask.rs  palette.rs  pathfinding.rs  pipeline.rs  pixel_image.rs  preview.rs  recipe.rs  sim.rs  target_look.rs  target_style.rs  terrain.rs  terrain_artkit.rs  tileset.rs  (+3 more)
crates/ground_game/: Cargo.toml
crates/ground_sprite_app/: Cargo.toml
crates/ground_sprite_cli/: Cargo.toml
docs/: ARCHITECTURE.md  ART_PACK_0_1_REVIEW.md  ART_PIVOT.md  ASSET_PIPELINE.md  MILESTONES.md  MISSION_LAB_VISUAL_PLAYTEST_0_1.md  PLAYABLE_SLICE_0_1_REVIEW.md  ROAD_BELOW_PAINTOVER_BRIEF.md  SPRITEGEN.md  VISUAL_TARGET_0_1.md  VISUAL_TARGET_0_1_SCORECARD.md
palettes/: muted_field_32.notes.md  muted_field_32.ron
recipes/: dry_upland_outpost.ron
(+23 files in other folders)
