[workspace]
members = [
    "crates/ground_core",
    "crates/ground_game",
    "crates/ground_app",
    "crates/ground_cli",
    "crates/ground_sprite_app",
    "crates/ground_sprite_cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Arman + GPT-5.5 Pro"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
eframe = { version = "0.34.2", default-features = true }
image = { version = "0.25.6", default-features = false, features = ["png"] }
ron = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
