[package]
name = "ground_app"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
eframe.workspace = true
ground_core = { path = "../ground_core" }
ground_game = { path = "../ground_game" }
serde.workspace = true
serde_json.workspace = true
